--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:@localhost:3306/lamma_social"
+WEBHOOK_SECRET=whsec_GKVGtfv6pyrS0VfpUjoNIY2LSxNOrrS7
