--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/
 
 DATABASE_URL="mysql://root:@localhost:3306/lamma_social"
 WEBHOOK_SECRET=whsec_GKVGtfv6pyrS0VfpUjoNIY2LSxNOrrS7
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=social
+NEXT_PUBLIC_CLOUDINARY_API_KEY=848933334376762
+CLOUDINARY_API_SECRET=QCzvvOYC3bkK91FhgXjUDoVilxI
